# 4WD-Robot

./: LICENSE  README.md  pyproject.toml
src/: controller_setup.py  gui.py  gui.py.save  pro-config.json  robot_motors.py  run_robot.py  run_robot_backup.py
src/myrobot/: controller_input.py  gui.py  robot_handler.py
src/myrobot/media/videos/: recorded_video.avi
tests/: back.py
