[project]
name = "robot_package_rjajko"
version = "0.0.1"
authors = [
	{ name="Rob Jajko", email="rmj5606@psu.edu"},
]
description = "Pacakge for a 4WD Raspberyy Pi Robot"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
